# feed-conc-ctrl

./: LICENSE  README.md  analytical_solution_analysis.md  analytical_vs_rk4_comparison.md  demo-do-mpc.ipynb  do-mpc-demo-2-tanks.ipynb  do-mpc-demo-2.ipynb  do-mpc-demo-4-tanks.ipynb  do-mpc-demo.ipynb  do-mpc-forecast-demo.ipynb  do_mpc_simulator_outputs.py  do_mpc_sym_vars.py  feed-tank-model-analytical.ipynb  feed-tank-models.ipynb  numerical_stability_analysis.py  pyproject.toml  requirements.txt  simulate-tank-network.ipynb
plots/: do-mpc-demo-2.ipynb
src/do_mpc_utils/: mpc_constructor.py
src/feed_conc_ctrl/: __init__.py  input_generators.py  models.py  plot_utils.py
tests/: __init__.py  test_flow_mixer_models.py  test_input_generators.py  test_mixing_tank_model.py  test_mixing_tank_model_ct.py  test_mixing_tank_model_dt.py  test_mpc_constructor.py
tests/data/: feed_conc_ctrl_sim_results.csv
